@@ -3,6 +3,7 @@ cm4all-beng-proxy (0.6.19) unstable; urgency=low
   * http-client: release caller pool after socket release
   * memcached-client: release socket on marshalling error
   * stock: unref caller pool in abort handler
+  * stock: lazy cleanup
 
  --
 
